<resources>
    <string name="app_name">Char店铺</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="bottom_tab_image_des">To show the image of bottom.</string>


    <string name="home_category_text_commodity">日用品</string>
    <string name="home_category_text_baby">母婴</string>
    <string name="home_category_text_foods">食品</string>
    <string name="home_category_text_clothes">衣饰</string>
    <string name="home_category_text_electronics">电子产品</string>
    <string name="home_top_recommend_title">热门推荐</string>
    <string name="home_top_recommend_title_decorate">发现更多人气好货</string>
    <string name="message_title">消息</string>
    <string name="cart_title">购物车</string>
    <string name="cart_edit">编辑</string>


    <string name="profile_user_name">点我登录</string>
    <string name="profile_personal_recommend_title">个性推荐</string>
    <string name="profile_personal_recommend_title_decorate">更多适合你的好货</string>


    <string name="search_history_record">历史搜索</string>
    <string name="search_result_text_title">搜索结果</string>


    <string name="goods_detail_title">商品详情</string>
    <string name="cart_bottom_checkout">去结算(%d)</string>
    <string name="cart_bottom_checkout_remove">删除(%d)</string>


    <string name="shop_name_title">%s</string>
    <string name="shop_goods_price">¥%s</string>
    <string name="shop_goods_checkout">月销%d笔</string>
    <string name="shop_goods_sale_volume">%d人付款</string>
    <string name="app_price_prefix">￥</string>


    <string name="goods_item_pop_stock">库存%d件</string>
    <string name="goods_item_buy_number">购买数量</string>
    <string name="goods_item_pop_price">%.2f</string>
    <string name="goods_item_pop_send_region">配送至: %s</string>
    <string name="goods_item_pop_buy_limited">(限购%d件)</string>
    <string name="app_goods_chosen_buy_number">%d</string>


    <string name="user_info_base_format">%s</string>
    <string name="user_info_item_title">%s</string>
    <string name="user_info_item_content">%s</string>


    <string name="address_modify_header_title_tv_edit">编辑收货地址</string>
    <string name="address_modify_header_title_tv_add">新增收货地址</string>
    <string name="preorder_list_item_goods_plan">颜色分类: %s</string>
    <string name="preorder_list_item_goods_num">x%d</string>
    <string name="order_goods_item_goods_num">共%d件商品</string>
    <string name="goods_display_ads_title">【享6期免息】Xiaomi/小米 Redmi K20 Pro 新品4800万三摄骁龙855手机9官方旗舰店正品note7红米k20pro</string>
    <string name="goods_display_sale_volume">%d人购买</string>
    <string name="app_dev_email">charjindev@gmail.com</string>

</resources>
